--- a/styleIndex.css
+++ b/styleIndex.css
@@ -5,8 +5,9 @@
     color: azure;
     font-size: 35px;
     font-family: "Arial Bold", sans-serif;
-    border-radius: 15px 15px 0px 0px;
-    margin: 0px;
+    border-radius: 30px 30px 0px 0px;
+    padding-top: 10px;
+    margin-top: 0px;
 }
 #anterior {
     background-color: #a8cf45;
@@ -14,39 +15,45 @@
     font-size: 35px;
     font-family: "Arial Bold", sans-serif;
     text-align: center;
-    border-radius: 15px 15px 0px 0px;
-    margin: 0px;
-
+    border-radius: 30px 30px 0px 0px;
+    padding-top: 10px;
+    margin-top: 0px;
 }
 
 #atual {
-    border-color: #34437a;
-    width: 50%;
-    border-radius: 15px;
-    justify-content: center;
-    align-items: center;
-    margin-top: 40px;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: center;
+    border-radius: 30px;
     background-color: azure;
     box-shadow: 0 0 1em black;
     opacity: 0.8;
+    width: 800px;
+    display: inline-grid;
+    margin-right: 15px;
+    margin-left: 7%;
+    margin-top: 20px;
+    height: 500px;
 }
 
 #dadosAnteriores {
     text-align: center;
-    width: 50%;
-    border-radius: 15px;
-    margin: auto;
+    border-radius: 30px;
     background-color: azure;
     box-shadow: 0 0 1em black;
     opacity: 0.8;
+    width: 800px;
+    display: inline-grid;
+    margin-left: 15px;
+    margin-top: 20px;
+    margin-right: 6%;
+    height: 500px;
 }
 
 #tagNome1 {
     font-size: 35px;
     font-family: "Arial Bold", sans-serif;
     text-align: center;
+    margin-top: 20px;
+    margin-bottom: 0px;
 }
 
 #nome {
@@ -54,12 +61,14 @@
     font-size: 43px;
     color: #34437a;
     text-align: center;
+    margin-bottom: 0px;
 }
 
 #tagConsultorio1 {
     font-family: "Arial Bold", sans-serif;
     font-size: 35px;
     text-align: center;
+    margin-bottom: 0px;
 }
 
 #consultorio {
@@ -73,17 +82,24 @@
 #tagNome2 {
     font-size: 35px;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 0px;
 }
 
 #nomeAnterior {
     font-size: 43px;
     font-family: Arial, Helvetica, sans-serif;
     color: #a8cf45;
+    margin-bottom: 0px;
+    text-align: center;
 }
 
 #tagConsultorio2 {
     font-family: "Arial Bold", sans-serif;
     font-size: 35px;
+    text-align: center;
+    margin-bottom: 0px;
 }
 
 #consultorioAnterior {
@@ -95,4 +111,16 @@
 
 body{
     background-image: url(background_finish.fw.png);
+}
+
+#logoJvc {
+    padding: none;
+    margin-left: 42%;
+    margin-right: 58%;
+}
+
+#logoIntelly {
+    padding: none;
+    margin-left: 42%;
+    margin-right: 58%;
 }
