--- a/styleForm.css
+++ b/styleForm.css
@@ -1,7 +1,7 @@
 #form{
-    width: 500px;
-    height: 420px;
-    border-radius: 15px;
+    width: 800px;
+    height: 500px;
+    border-radius: 40px;
     justify-content: center;
     align-items: center;
     background-color: white;
@@ -11,38 +11,35 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 200px;
+    margin-top: 20px;
 }
 
 #name {
-    text-align: center;
     font-size: 35px;
     font-family: "Arial Bold", sans-serif;
-    border-radius: 15px 15px 15px 15px;
-    margin: 0px;
+    border-radius: 40px 40px 40px 40px;
+    margin-left: 150px;
+    margin-top: 10px;
     padding: 10px;
+    width: 476px;
+    border: solid 2px;
+    border-color: #34437a;
+    outline: 0;
 }
 
 #consultorio {
     text-align: center;
     font-size: 35px;
     font-family: "Arial Bold", sans-serif;
-    border-radius: 15px 15px 15px 15px;
-    margin: 0px;
+    border-radius: 40px 40px 40px 40px;
+    margin-left: 150px;
+    margin-top: 10px;
     padding: 10px;
 }
 
 label {
     display: block;
     margin-top: 10px;
-}
-
-#name {
-    padding: 10px;
-    width: 476px;
-    border: solid 2px;
-    border-color: #34437a;
-    outline: 0;
 }
 
 #consultorio {
@@ -58,7 +55,7 @@ label {
     font-size: 30px;
     font-family: "Arial Bold", sans-serif;
     text-align: center;
-    margin-top: 0px;
+    margin-top: 20px;
     padding: 5px;
 }
 
@@ -74,31 +71,59 @@ label {
 #botao {
     padding: 15px 32px;
     border: 2px;
-    color: white;
+    color: #34437a;
     text-align: center;
-    background-color: #34437a;
+    background-color: white;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 20px;
     border-radius: 15px;
-    margin-top: 20px;
-    margin-left: 200px;
+    margin-top: 45px;
+    margin-left: 34%;
+    width: 250px;
+    transition-duration: 0.4s;
+    border: solid 2px #34437a;
+}
+
+#botao:hover {
+    background-color: #34437a;
+    color: white;
 }
 
 body{
-    background-image: url(background_form.fw.png);
+    background-image: url(background_finish.fw.png);
 }
 
 #clickMe {
     padding: 15px 32px;
+    color: #a8cf45;
     border: 2px;
-    color: white;
     text-align: center;
-    background-color: #a8cf45;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 20px;
     border-radius: 15px;
+    border: solid 2px #a8cf45;
     margin-top: 20px;
-    margin-left: 175px;
+    margin-left: 34%;
+    width: 250px;
+    transition-duration: 0.4s;
+    background-color: white;
+}
+
+#clickMe:hover {
+    background-color: #a8cf45;
+    color: white;
+}
+
+#logoJvc {
+    padding: none;
+    margin-left: 42%;
+    margin-right: 58%;
+}
+
+#logoIntelly {
+    padding: none;
+    margin-left: 42%;
+    margin-right: 58%;
 }
